oauth2-proxy/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls-disable
  namespace: oauth2-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  mtls:
    mode: DISABLE
