oauth2-proxy/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: oauth2-proxy
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - auth.local.io
